--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <link rel="canonical" href="https://moonvalleytours.com" />
 
     <meta name="robots" content="index, follow" />
-    <meta name="theme-color" content="#0471A6" />
+    <meta name="theme-color" content="#0a0908" />
   </head>
   <body>
     <div id="root"></div>
