Fix search hero width

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1"
     />
-    <title>MoonValleyTours | Day trips, package tours and flights.</title>
+    <title>MoonValleyTours – Travel and tour, around the world.</title>
 
     <meta
       name="description"
