--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <meta property="og:url" content="https://moonvalleytours.com/" />
     <meta
       property="og:image"
-      content="https://moonvalleytours.com/moonvalleyfav.svg"
+      content="https://res.cloudinary.com/drtykwq1x/image/upload/v1717900446/Screenshot-moonvalley_doiqgw.webp"
     />
 
     <link
